# claudepilot

./: .gitignore  README.md  config.example.yaml  pyproject.toml
config/: config.example.yaml  default_commands.txt
doc/: backlog.md  changelog.md  todo.md
doc/src/: cc_bridge.md  models.md  orchestrator.md  sheets_transport.md  transport.md
src/: __init__.py  cc_bridge.py  models.py  orchestrator.py  sheets_transport.py  transport.py
tests/: test_orchestrator.py  test_sheets_transport.py
